# brit

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  crate-status.md  devfile.yaml
.claude/: settings.local.json
.claude/agents/: gix-architect.md  gix-runner.md  gix-steward.md  rust-architect.md
.github/workflows/: sync-upstream.yml
brit-build-ref/: Cargo.toml
brit-build-ref/src/: build_cmd.rs  deploy_cmd.rs  main.rs  reach_cmd.rs  validate_cmd.rs
brit-cli/: Cargo.toml
brit-cli/src/: error.rs  main.rs  output.rs
brit-cli/src/commands/: affected.rs  baseline.rs  fingerprint.rs  graph_discover.rs  graph_show.rs  mod.rs  plan.rs
brit-cli/tests/: cli_smoke.rs
brit-epr/: Cargo.toml
brit-epr/src/: lib.rs
brit-epr/src/elohim/: mod.rs  parse.rs  pillar_trailers.rs  refs.rs  schema.rs  validate.rs
brit-epr/src/elohim/attestation/: build.rs  deploy.rs  mod.rs  reach.rs  validation.rs
brit-epr/src/engine/: app_schema.rs  cid.rs  content_node.rs  error.rs  mod.rs  object_store.rs  signing.rs  trailer_block.rs  trailer_set.rs
brit-epr/tests/: attestation_roundtrip.rs  elohim_parse.rs  elohim_validate.rs  engine_parsing.rs  object_store.rs  reach_computation.rs  ref_management.rs
brit-epr/tests/fixtures/: happy_all_three_pillars.txt  malformed_shefa_node.txt  missing_qahal.txt
brit-graph/: Cargo.toml
brit-graph/src/: affected.rs  fingerprint.rs  graph.rs  lib.rs  repo_fingerprint.rs  topo.rs  traits.rs
brit-graph/tests/: affected_tracking.rs  fingerprint_determinism.rs  graph_construction.rs  repo_fingerprint.rs  topo_ordering.rs
brit-verify/: Cargo.toml
brit-verify/src/: main.rs
docs/: composition.md
docs/parity/: SHORTCOMINGS.md  commands.md
docs/plans/: 2026-04-11-phase-0-epr-trailer-foundation.md  2026-04-16-phase-2a-build-attestation-primitives.md  CLAUDE.md  README.md
docs/plans/phases/: phase-2-contentnode-adapter.md  phase-2a-build-attestation-primitives.md  phase-3-libp2p-transport.md  phase-4-branch-readmes.md  phase-5-dht-discovery.md  phase-6-fork-governance.md
docs/schemas/: elohim-protocol-manifest.md
docs/schemas/reviews/: 2026-04-11-merge-consent-critique.md
docs/specs/: 2026-04-12-brit-design.md  2026-04-27-build-contract-before-push-design.md
docs/superpowers/plans/: 2026-04-22-dual-hash-harness-retrofit.md  2026-04-24-parity-loop-friction-fixes.md  2026-04-26-git-restore-driver.md
docs/superpowers/specs/: 2026-04-22-parity-ralph-loop-design.md
etc/parity/: enumerate.sh  prompt.md  shortcomings.sh
etc/plan/: CLAUDE.md  foundations-sprint-branch-render-and-config.md
gitoxide-core/: CLAUDE.md  Cargo.toml
gitoxide-core/src/: lib.rs
gitoxide-core/src/pack/: receive.rs
gitoxide-core/src/repository/: add.rs  blame.rs  branch.rs  cat.rs  clone.rs  commit.rs  diff.rs  fetch.rs  log.rs  mod.rs  mv.rs  pull.rs  push.rs  rebase.rs  reset.rs  restore.rs  rm.rs  show.rs  status.rs  switch.rs  tag.rs
gix/: CLAUDE.md  Cargo.toml
gix-actor/: CLAUDE.md
gix-archive/: CLAUDE.md
gix-attributes/: CLAUDE.md
gix-bitmap/: CLAUDE.md
gix-blame/: CLAUDE.md  Cargo.toml
gix-blame/benches/: incremental_blame.rs
gix-blame/src/: lib.rs  types.rs
gix-blame/tests/: blame.rs
gix-chunk/: CLAUDE.md
gix-command/: CLAUDE.md
gix-commitgraph/: CLAUDE.md  Cargo.toml
gix-commitgraph/src/: access.rs  bloom.rs  init.rs  lib.rs
gix-config/: CLAUDE.md
gix-config-value/: CLAUDE.md
gix-credentials/: CLAUDE.md
gix-date/: CLAUDE.md
gix-diff/: CLAUDE.md
gix-dir/: CLAUDE.md  Cargo.toml
gix-dir/tests/: dir_cwd.rs
gix-discover/: CLAUDE.md
gix-error/: CLAUDE.md
gix-features/: CLAUDE.md
gix-fetchhead/: CLAUDE.md
gix-filter/: CLAUDE.md
gix-fs/: CLAUDE.md
gix-fsck/: CLAUDE.md
gix-glob/: CLAUDE.md
gix-hash/: CLAUDE.md
gix-hashtable/: CLAUDE.md
gix-ignore/: CLAUDE.md
gix-imara-diff/: CLAUDE.md
gix-index/: CLAUDE.md
gix-lfs/: CLAUDE.md
gix-lock/: CLAUDE.md
gix-macros/: CLAUDE.md
gix-mailmap/: CLAUDE.md
gix-merge/: CLAUDE.md
gix-negotiate/: CLAUDE.md
gix-note/: CLAUDE.md
gix-object/: CLAUDE.md
gix-odb/: CLAUDE.md
gix-pack/: CLAUDE.md
gix-packetline/: CLAUDE.md
gix-path/: CLAUDE.md
gix-pathspec/: CLAUDE.md
gix-prompt/: CLAUDE.md
gix-protocol/: CLAUDE.md  Cargo.toml
gix-protocol/src/: lib.rs
gix-protocol/tests/: blocking-server.rs
gix-quote/: CLAUDE.md
gix-rebase/: CLAUDE.md
gix-ref/: CLAUDE.md
gix-refspec/: CLAUDE.md
gix-revision/: CLAUDE.md
gix-revwalk/: CLAUDE.md
gix-sec/: CLAUDE.md
gix-sequencer/: CLAUDE.md
gix-serve/: Cargo.toml
gix-serve/fixtures/: make_repo_empty.sh  make_repo_multi_branch.sh  make_repo_simple.sh  make_repo_with_tags.sh
gix-serve/src/: lib.rs  pack.rs  refs.rs  serve.rs
gix-serve/tests/: pack.rs  refs.rs  upload_pack.rs
gix-shallow/: CLAUDE.md
gix-status/: CLAUDE.md
gix-submodule/: CLAUDE.md
gix-tempfile/: CLAUDE.md
gix-tix/: CLAUDE.md
gix-trace/: CLAUDE.md
gix-transport/: CLAUDE.md  Cargo.toml
gix-transport/src/: lib.rs
gix-transport/tests/: blocking-server.rs
gix-traverse/: CLAUDE.md
gix-tui/: CLAUDE.md
gix-url/: CLAUDE.md
gix-utils/: CLAUDE.md
gix-validate/: CLAUDE.md
gix-worktree/: CLAUDE.md
gix-worktree-state/: CLAUDE.md
gix-worktree-stream/: CLAUDE.md
src/: CLAUDE.md  uni.rs
src/plumbing/: CLAUDE.md  main.rs  progress.rs
src/porcelain/: CLAUDE.md
tests/: .gitignore  CLAUDE.md  baseline.md  helpers.sh  journey.sh  parity.sh  utilities.sh
tests/cli-journey/: Cargo.toml
tests/cli-journey/src/: lib.rs
tests/cli-journey/src/support/: mock_remote.rs  mod.rs  normalize.rs  runner.rs  test_repo.rs
tests/cli-journey/tests/: brit.rs  brit_build_ref.rs  brit_verify.rs  mock_remote.rs  normalize.rs  rakia.rs  runner.rs  test_repo.rs
tests/cli-test-page/: Cargo.toml
tests/cli-test-page/src/: coverage.rs  diff.rs  discover.rs  format.rs  lib.rs  main.rs  normalize.rs
tests/cli-test-page/tests/: coverage.rs  diff.rs  discover.rs  format.rs
tests/it/: CLAUDE.md
tests/journey/: brit-build-ref.sh  brit-verify.sh  ein.sh  gix.sh  rakia.sh
tests/tools/: CLAUDE.md
(+155 files in other folders)
