lints.workspace = true

[package]
name = "cli-test-page"
version = "0.0.0"
description = "Brit CLI test page runner — produces baseline.md from journey + Rust tests"
repository = "https://github.com/ethosengine/brit"
authors = ["Matthew Dowell <matthew@ethosengine.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "brit-test-page"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
similar = { version = "2", features = ["text"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
